--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body>
 
 <h2>HTML Image</h2>
-<img src="guinea_pig.jpg" alt = "This is a guinea pig." width="500" height="600">
+<img src= "images/guinea_pig.jpg" >
+     alt = "This is a guinea pig." width="500" height="600">
 
 </body>
 </html>
