--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h2>HTML Image</h2>
-<img src= "image/guinea.jpg" alt = "This is a guinea pig." width="500" height="600">
+<img src= "image/guinea1.jpg" alt = "This is a guinea pig." width="500" height="600">
 
 </body>
 </html>
