--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h2>HTML Image</h2>
 <img src= "guinea1.jpg" alt = "This is a guinea pig." width="500" height="600">
 <img src= "broccolo.jpg" alt = "This is Broccolo." width="500" height="600">
-<img src= ".jpg" alt = "This is a guinea pig." width="500" height="600">
+<img src= "majora.jpg" alt = "This is my mom." width="500" height="600">
 
 </body>
 </html>
